--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -88,6 +88,7 @@ else(NOT DEFINED EMSCRIPTEN)
         src/test/cpp/document_file_testing.cpp
         src/test/cpp/main.cpp
         src/test/cpp/test_parsing.cpp
+        src/test/cpp/test_unicode.cpp
         src/test/cpp/test_valid.cpp
     )
 
