--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -89,6 +89,7 @@ else(NOT DEFINED EMSCRIPTEN)
     add_executable(mmml-test ${HEADERS}
         src/test/cpp/document_file_testing.cpp
         src/test/cpp/main.cpp
+        src/test/cpp/test_chars_strings.cpp
         src/test/cpp/test_parsing.cpp
         src/test/cpp/test_unicode.cpp
         src/test/cpp/test_valid.cpp
