--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -89,6 +89,8 @@ else(NOT DEFINED EMSCRIPTEN)
         src/test/cpp/document_file_testing.cpp
         src/test/cpp/main.cpp
         src/test/cpp/test_chars_strings.cpp
+        src/test/cpp/test_document_generation.cpp
+        src/test/cpp/test_html_writer.cpp
         src/test/cpp/test_parsing.cpp
         src/test/cpp/test_unicode.cpp
         src/test/cpp/test_valid.cpp
