--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -92,6 +92,7 @@ else(NOT DEFINED EMSCRIPTEN)
         src/test/cpp/test_document_generation.cpp
         src/test/cpp/test_html_writer.cpp
         src/test/cpp/test_parsing.cpp
+        src/test/cpp/test_to_chars.cpp
         src/test/cpp/test_unicode.cpp
         src/test/cpp/test_valid.cpp
     )
