compile html_entities.cpp

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,6 +31,7 @@ include_directories(${INCLUDE_DIRS})
 
 add_library(mmml STATIC
     src/main/cpp/util/html_writer.cpp
+    src/main/cpp/util/html_entities.cpp
     src/main/cpp/util/io.cpp
     src/main/cpp/util/tty.cpp
     src/main/cpp/util/typo.cpp
