--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,6 +30,10 @@ set(INCLUDE_DIRS "${CMAKE_CURRENT_LIST_DIR}/include")
 include_directories(${INCLUDE_DIRS})
 
 add_library(mmml STATIC
+    src/main/cpp/highlight/cpp.cpp
+    src/main/cpp/highlight/mmml.cpp
+
+    src/main/cpp/util/chars.cpp
     src/main/cpp/util/html_writer.cpp
     src/main/cpp/util/html_entities.cpp
     src/main/cpp/util/io.cpp
