reimplement WASM compilation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -41,26 +41,36 @@ embed_asset("${THEMES_DIR}/wg21.json" wg21_json WG21_JSON_CPP)
 
 set(LLVM_WARNING_OPTIONS -Wall -Wimplicit-fallthrough -Wpedantic -Wextra -Wconversion -Wmissing-declarations -Wno-bit-int-extension)
 
+set(ASAN_ENABLED OFF)
+
 if(DEFINED EMSCRIPTEN)
     set(WARNING_OPTIONS ${LLVM_WARNING_OPTIONS})
-#    set(SANITIZER_OPTIONS)
+    if(ASAN_ENABLED)
+        set(SANITIZER_OPTIONS -fsanitize=address,undefined)
+    endif()
 elseif(CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
     set(WARNING_OPTIONS -Wall -Wimplicit-fallthrough -Wpedantic -Wextra -Wconversion -Wmissing-declarations)
-#    set(SANITIZER_OPTIONS -fsanitize=address,undefined)
+    if(ASAN_ENABLED)
+        set(SANITIZER_OPTIONS -fsanitize=address,undefined)
+    endif()
     add_compile_definitions($<$<CONFIG:Debug>:_GLIBCXX_ASSERTIONS>)
 elseif(CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
     set(WARNING_OPTIONS ${LLVM_WARNING_OPTIONS})
-#    set(SANITIZER_OPTIONS -fsanitize=address,undefined)
+    if(ASAN_ENABLED)
+        set(SANITIZER_OPTIONS -fsanitize=address,undefined)
+    endif()
     add_compile_definitions($<$<CONFIG:Debug>:_GLIBCXX_ASSERTIONS>)
 elseif(CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
     set(WARNING_OPTIONS -W4)
-#    set(SANITIZER_OPTIONS -fsanitize:address)
+    if(ASAN_ENABLED)
+        set(SANITIZER_OPTIONS -fsanitize=address,undefined)
+    endif()
 endif()
 
 set(INCLUDE_DIRS "${CMAKE_CURRENT_LIST_DIR}/include")
 include_directories(${INCLUDE_DIRS})
 
-add_library(cowel STATIC
+set(LIBRARY_SOURCES
     src/main/cpp/util/code_point_names.cpp
     src/main/cpp/util/draft_uris.cpp
     src/main/cpp/util/html_writer.cpp
@@ -96,17 +106,50 @@ add_library(cowel STATIC
     src/main/cpp/services.cpp
     src/main/cpp/theme_to_css.cpp
 
+    # generated sources
     "${LIGHT_DARK_JS_CPP}"
     "${MAIN_CSS_CPP}"
     "${SETTINGS_WIDGET_HTML_CPP}"
     "${WG21_JSON_CPP}"
 )
 
-target_link_libraries(cowel ulight)
-target_compile_options(cowel PUBLIC ${WARNING_OPTIONS} ${SANITIZER_OPTIONS})
-target_link_options(cowel PUBLIC ${SANITIZER_OPTIONS})
+if(DEFINED EMSCRIPTEN)
+    add_executable(cowel-wasm ${LIBRARY_SOURCES})
+    set_target_properties(cowel-wasm PROPERTIES
+        OUTPUT_NAME "cowel"
+        SUFFIX ".wasm"
+    )
+    target_compile_options(cowel-wasm PRIVATE
+        # the SHELL option group prevents de-duplication
+        # https://cmake.org/cmake/help/latest/prop_tgt/COMPILE_OPTIONS.html#option-de-duplication
+        "SHELL:-s SIDE_MODULE=0"
+        "-stdlib=libc++"
+        "-Os"
+        ${WARNING_OPTIONS}
+        ${SANITIZER_OPTIONS}
+    )
+    target_link_options(cowel-wasm PRIVATE
+        "-Os"
+        "-stdlib=libc++"
+        "-static-libc++"
+        "SHELL:-s WASM=1"
+        "SHELL:-s ENVIRONMENT=web"
+        "SHELL:-s ALLOW_MEMORY_GROWTH=1"
+        "SHELL:-s ALLOW_TABLE_GROWTH=1"
+        "SHELL:-s AUTO_JS_LIBRARIES=0"
+        "SHELL:-s SIDE_MODULE=0"
+        "SHELL:-s STANDALONE_WASM=1"
+        "SHELL:-s \"EXPORTED_RUNTIME_METHODS=[]\""
+        "--no-entry"
+        ${SANITIZER_OPTIONS}
+    )
+    target_link_libraries(cowel-wasm ulight)
+else()
+    add_library(cowel STATIC ${LIBRARY_SOURCES})
+    target_link_libraries(cowel ulight)
+    target_compile_options(cowel PUBLIC ${WARNING_OPTIONS} ${SANITIZER_OPTIONS})
+    target_link_options(cowel PUBLIC ${SANITIZER_OPTIONS})
 
-if(NOT DEFINED EMSCRIPTEN)
     add_executable(cowel-cli ${HEADERS}
         src/main/cpp/cli.cpp
     )
