--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "cowel",
-    "version": "0.3.1-pre1",
+    "version": "0.3.1",
     "description": "COWEL (Compact Web Language) command line utility",
     "main": "cowel.js",
     "type": "module",
