use documentation as integration test for node build

--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -144,3 +144,12 @@ jobs:
         --target cowel-npm
         --config Release
         --verbose
+
+    - name: Test
+      run: |
+        node "${{ steps.strings.outputs.build_dir }}/npm/" run \
+          docs/index.cow \
+          docs/actual.html &&
+        diff --color=always -u \
+          docs/index.html \
+          docs/actual.html
