implement integer from_characters with base, refactor
This also pulls in various parts into a new charconv.cpp file to avoid header bloat.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -176,6 +176,7 @@ set(COMMON_LIBRARY_SOURCES
     include/cowel/ulight_highlighter.hpp
     include/cowel/value.hpp
 
+    src/main/cpp/util/charconv.cpp
     src/main/cpp/util/code_point_names.cpp
     src/main/cpp/util/draft_uris.cpp
     src/main/cpp/util/html_entities.cpp
