--- a/editor/vscode/language-configuration.json
+++ b/editor/vscode/language-configuration.json
@@ -5,24 +5,24 @@
   },
   "brackets": [
     [ "{", "}" ],
-    [ "[", "]" ],
-    [ "(", ")" ]
+    [ "[", "]" ]
   ],
   "autoClosingPairs": [
-    [ "{", "}" ],
-    [ "[", "]" ],
-    [ "(", ")" ],
-    [ "\"", "\"" ]
+    { "open": "{", "close": "}" },
+    { "open": "[", "close": "]" },
+    { "open": "(", "close": ")", "notIn": ["string", "comment"] },
+    { "open": "\"", "close": "\"", "notIn": ["string"] },
+    { "open": "\\*", "close": "*\\" }
   ],
   "surroundingPairs": [
     [ "{", "}" ],
     [ "[", "]" ],
-    [ "(", ")" ],
-    [ "\"", "\"" ]
+    [ "\"", "\"" ],
+    [ "\\*", "*\\" ]
   ],
   "folding": {
     "markers": {
-      "start": "^\\s*\\\\(?:dfn|codeblock|htmlblock|style|table|ul|ol)\\s*(?:\\(|{)",
+      "start": "^\\s*\\\\[a-zA-Z_][a-zA-Z0-9_]*\\s*(?:\\(|{)",
       "end": "^\\s*[})]"
     }
   },
