--- a/editor/vscode/package.json
+++ b/editor/vscode/package.json
@@ -22,7 +22,8 @@
     "@vscode/vsce": "^3.7.1"
   },
   "engines": {
-    "vscode": "^1.80.0"
+    "vscode": "^1.80.0",
+    "node": "^20.0.0"
   },
   "repository": {
     "type": "git",
@@ -37,7 +38,8 @@
           "cowel"
         ],
         "extensions": [
-          ".cow"
+          ".cow",
+          ".cowel"
         ],
         "configuration": "./language-configuration.json"
       }
