--- a/editor/vscode/language-configuration.json
+++ b/editor/vscode/language-configuration.json
@@ -4,17 +4,19 @@
     "blockComment": [ "\\*", "*\\" ]
   },
   "brackets": [
+    [ "(", ")" ],
     [ "{", "}" ],
     [ "[", "]" ]
   ],
   "autoClosingPairs": [
+    { "open": "(", "close": ")" },
     { "open": "{", "close": "}" },
     { "open": "[", "close": "]" },
-    { "open": "(", "close": ")", "notIn": ["string", "comment"] },
     { "open": "\"", "close": "\"", "notIn": ["string"] },
     { "open": "\\*", "close": "*\\" }
   ],
   "surroundingPairs": [
+    [ "(", ")" ],
     [ "{", "}" ],
     [ "[", "]" ],
     [ "\"", "\"" ],
