add cowel_str_length and cowel_str_utf8_length
This change also includes a relatively large refactor of the Value class.
This was necessary to track additional metadata about the string without exceeding "sizeof(Value) <= 64" because std::variant uses a std::size_t index, even if there are few alternatives and a narrower integer would suffice.
The new String_Kind type is used to classify strings, and the string kind is tracked in various places, such as the parser, or when creating a pure ASCII string by splicing integers, etc.

Closes #155.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -170,6 +170,7 @@ set(COMMON_LIBRARY_SOURCES
     include/cowel/relative_file_loader.hpp
     include/cowel/services.hpp
     include/cowel/settings.hpp
+    include/cowel/string_kind.hpp
     include/cowel/theme_to_css.hpp
     include/cowel/type.hpp
     include/cowel/ulight_highlighter.hpp
