update ulight, refactor string-related functions
- pull in fix of contain_ascii_ignore_case from ulight
- use the (now named ascii::contains_ignore_case) in code_point_by_name.cpp
- move HTML-specific functionality out of strings.hpp
- delete dead code code_point_names.cpp

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -111,6 +111,7 @@ set(COMMON_LIBRARY_SOURCES
     include/cowel/util/annotated_string.hpp
     include/cowel/util/annotation_span.hpp
     include/cowel/util/ansi.hpp
+    include/cowel/util/ascii_algorithm.hpp
     include/cowel/util/assert.hpp
     include/cowel/util/bit_permutations.hpp
     include/cowel/util/buffer.hpp
