fix "main" instead of "master" in workflow

--- a/.github/workflows/textmate-test.yml
+++ b/.github/workflows/textmate-test.yml
@@ -2,11 +2,9 @@ name: TextMate Grammar Tests
 
 on:
   push:
-    branches:
-      - main
+    branches: [ "master" ]
   pull_request:
-    branches:
-      - main
+    branches: [ "master" ]
 
 jobs:
   test:
